fix: align website palette to new guidelines

--- a/css/members.css
+++ b/css/members.css
@@ -1,4 +1,4 @@
-
+@import url('colors.css');
 
 .box img,
 .box:after,
@@ -6,7 +6,9 @@
     width: 100%;
     transition: all .3s ease 0s;
 }
-.box .icon, .icon li a {
+
+.box .icon,
+.icon li a {
     text-align: center
 }
 
@@ -48,14 +50,45 @@
     transform: rotateZ(90deg)
 }
 
-.box-force-rose:after, .box-force-rose:before { background: rgba(var(--color-force-rose), .5); }
-.box-force-jaune:after, .box-force-jaune:before { background: rgba(var(--color-force-jaune), .5); }
-.box-force-bleue:after, .box-force-bleue:before { background: rgba(var(--color-force-bleue), .5); }
-.box-force-turquoise:after, .box-force-turquoise:before { background: rgba(var(--color-force-turquoise), .5); }
-.box-force-verte:after, .box-force-verte:before { background: rgba(var(--color-force-verte), .5); }
-.box-force-rouge:after, .box-force-rouge:before { background: rgba(var(--color-force-rouge), .5); }
-.box-force-orange:after, .box-force-orange:before { background: rgba(var(--color-force-orange), .5); }
-.box-force-violette:after, .box-force-violette:before { background: rgba(var(--color-force-violette), .5); }
+.box-force-rose:after,
+.box-force-rose:before {
+    background: rgba(var(--color-force-rose), .5);
+}
+
+.box-force-jaune:after,
+.box-force-jaune:before {
+    background: rgba(var(--color-force-jaune), .5);
+}
+
+.box-force-bleue:after,
+.box-force-bleue:before {
+    background: rgba(var(--color-force-bleue), .5);
+}
+
+.box-force-turquoise:after,
+.box-force-turquoise:before {
+    background: rgba(var(--color-force-turquoise), .5);
+}
+
+.box-force-verte:after,
+.box-force-verte:before {
+    background: rgba(var(--color-force-verte), .5);
+}
+
+.box-force-rouge:after,
+.box-force-rouge:before {
+    background: rgba(var(--color-force-rouge), .5);
+}
+
+.box-force-orange:after,
+.box-force-orange:before {
+    background: rgba(var(--color-force-orange), .5);
+}
+
+.box-force-violette:after,
+.box-force-violette:before {
+    background: rgba(var(--color-force-violette), .5);
+}
 
 .box:after {
     top: auto;
@@ -119,7 +152,8 @@
 .box .icon {
     padding: 7px 5px;
     list-style: none;
-    background: #004cbf;
+    /*background: #004cbf;*/
+    background: var(--color-blue-cinema);
     border-radius: 0 0 0 10px;
     top: -100%;
     right: 0;
@@ -162,13 +196,27 @@
 .custom-tooltip::before {
     text-decoration: underline;
     padding: 10px;
-    font-weight:600;
+    font-weight: 600;
     background-color: black;
     color: white;
 }
 
-.custom-tooltip-film::before  { content: "Dernier film ou série vu(e)";}
-.custom-tooltip-anime::before  {content: "(Dessin) animé préféré";}
-.custom-tooltip-game::before  {content: "Jeu vidéo favori";}
-.custom-tooltip-hero::before  {content: "Héro(ïne) de mon enfance";}
-.custom-tooltip-superpower::before  {content: "Super-pouvoir rêvé";}
+.custom-tooltip-film::before {
+    content: "Dernier film ou série vu(e)";
+}
+
+.custom-tooltip-anime::before {
+    content: "(Dessin) animé préféré";
+}
+
+.custom-tooltip-game::before {
+    content: "Jeu vidéo favori";
+}
+
+.custom-tooltip-hero::before {
+    content: "Héro(ïne) de mon enfance";
+}
+
+.custom-tooltip-superpower::before {
+    content: "Super-pouvoir rêvé";
+}
